--- a/package.json
+++ b/package.json
@@ -28,18 +28,19 @@
   ],
   "scripts": {
     "watch": "npm run watch-js-css | npm run watch-html",
-    "watch-js-css": "watch 'npm run build' src/frontend/js src/frontend/css",
-    "watch-html": "watch 'npm run copy-html' src/frontend/html",
+    "watch-js-css": "chokidar 'src/frontend/js' 'src/frontend/css' -c 'npm run build'",
+    "watch-html": "chokidar 'src/frontend/html' -c 'npm run copy-html'",
     "copy-html": "copyfiles -f src/frontend/html/*.html dist",
     "build": "rollup --config rollup.config.js",
     "webserver": "ws --static.index dist/index.html",
     "webserver-dev": "ws --static.index dist/index-dev.html",
-    "start": "npm run webserver | npm run watch",
-    "start-dev": "npm run webserver-dev | npm run watch",
+    "start": "npm run webserver",
+    "start-dev": "npm run webserver-dev",
     "semantic-release": "semantic-release"
   },
   "devDependencies": {
     "chalk": "^4.1.0",
+    "chokidar-cli": "^2.1.0",
     "copyfiles": "2.3.0",
     "eslint": "^7.20.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -48,8 +49,7 @@
     "rollup": "2.26.11",
     "rollup-plugin-scss": "2.6.1",
     "rollup-plugin-terser": "7.0.2",
-    "semantic-release": "17.2.4",
-    "watch": "1.0.2"
+    "semantic-release": "^17.4.3"
   },
   "keywords": [
     "performance",
